--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-botbuilder-integration-aiohttp>=4.14.0
+# botbuilder-integration-aiohttp>=4.14.0
 cookiecutter==1.7.0
 # aiohttp
 asyncio
 botbuilder-core
 
-# botbuilder-core>=4.7.0
+botbuilder-core>=4.7.0
 aiohttp==3.10.3
